--- a/pom.xml
+++ b/pom.xml
@@ -113,5 +113,11 @@
             <version>3c2837fd18</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.Somebodys-home</groupId>
+            <artifactId>NMLItems</artifactId>
+            <version>e5d2999fd6</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
